--- a/templates/picUpload.html
+++ b/templates/picUpload.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1>Upload an image to be analyzed</h1>
+    {% if empty %}
+    <p>You didn't submit anything. Try again.</p>
+    {% endif %}
     <form method=post enctype=multipart/form-data>
         <p><input type=file name=file></p>
         <p><input type=submit value=Upload></p>
