--- a/templates/picUpload.html
+++ b/templates/picUpload.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Upload an image to be analyzed</h1>
-    {% if empty %}
+    {% if empty == "bad" %}
     <p>You didn't submit anything. Try again.</p>
     {% endif %}
     <form method=post enctype=multipart/form-data>
